# easy-captcha-rs

./: Cargo.toml  README.md
examples/axum-tower-sessions/: Cargo.toml
examples/axum-tower-sessions/src/: main.rs
src/: lib.rs
src/base/: captcha.rs  randoms.rs
src/captcha/: arithmetic.rs  gif.rs  mod.rs  spec.rs
src/extension/: axum_tower_sessions.rs  mod.rs
src/utils/: color.rs  font.rs  png.rs
