[package]
name = "easy-captcha"
description = "The Rust implement of the Java captcha library whvcse/EasyCaptcha."
version = "0.1.0"
edition = "2021"
authors = ["Zhang Yao <cineazhan@icloud.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.56"
readme = "README.md"
repository = "https://github.com/Cinea4678/easy-captcha/"
homepage = "https://docs.rs/easy-captcha"
documentation = "https://docs.rs/easy-captcha"
keywords = ["captcha"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
