[package]
name = "easy-captcha"
description = "The Rust implement of the Java captcha library whvcse/EasyCaptcha."
version = "0.1.0"
edition = "2021"
authors = ["Zhang Yao <cineazhan@icloud.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.56"
readme = "README.md"
repository = "https://github.com/Cinea4678/easy-captcha/"
homepage = "https://docs.rs/easy-captcha"
documentation = "https://docs.rs/easy-captcha"
keywords = ["captcha"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = "0.11.0"
rand = "0.8.5"
raqote = { version = "0.8.3", default-features = false, features = ["font-kit", "pathfinder_geometry", "text"] }
rust-embed = "8.2.0"
sw-composite = "0.7.16"
tempfile = "3.9.0"
log = "0.4.20"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
png = "0.17.11"
base64 = "0.21.7"
evalexpr = "11.3.0"
